--- a/html-css/assets/css/style.css
+++ b/html-css/assets/css/style.css
@@ -3,7 +3,7 @@
 base
 */
 body {
-  background-color: #999;
+  background-color: #666;
 }
 .page-headline {
   font-size: 50px;
@@ -12,7 +12,7 @@ body {
   width: 75%;
   margin: 10px auto;
   border-radius: 5px;
-  border: double 5px #666;
+  border: double 5px #333;
 }
 /*
 section
@@ -24,14 +24,42 @@ section
 }
 .section-headline {
   font-size: 40px;
+  background-color: #fff;
+  border-radius: 5px;
 }
 /*
 grid
 */
-.grid {}
-.grid4-4 {}
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.grid4-4 {
+
+}
 .grid2-2 {}
 .grid6-1 {}
 
-
-.apartment {}
+/*
+apartment
+*/
+.grid-apartment {
+  background-color: #323273;
+  margin: 10px 25%;
+  border: solid 5px #333;
+  padding: 20px;
+}
+.apartment {
+  border: solid 2px #333;
+  height: 60px;
+  width: 20px;
+  margin: 10px;
+  width: calc(25% - 50px);
+}
+.apartment-light {
+  background-color: #ffff00;
+}
+.apartment-dark {
+  background-color: #666;
+}
